--- a/flexbox-2/index.html
+++ b/flexbox-2/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>All Your Business Data in One Place</h1>
     <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or analytics tools.</h3>
+    <div class="container">
+        <div class="item" id="item-a"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores consectetur consequuntur dignissimos distinctio ducimus enim est inventore laborum, minima minus, nobis pariatur placeat quibusdam tempora ullam, voluptate! Atque, odit?</p></div>
+        <div class="item" id="item-b"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores consectetur consequuntur dignissimos distinctio ducimus enim est inventore laborum, minima minus, nobis pariatur placeat quibusdam tempora ullam, voluptate! Atque, odit?</p></div>
+        <div class="item" id="item-c"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores consectetur consequuntur dignissimos distinctio ducimus enim est inventore laborum, minima minus, nobis pariatur placeat quibusdam tempora ullam, voluptate! Atque, odit?</p></div>
+    </div>
 </body>
 </html>
